--- a/nuxt-color/package.json
+++ b/nuxt-color/package.json
@@ -27,6 +27,8 @@
     "babel-jest": "^27.4.4",
     "jest": "^27.4.4",
     "postcss": "^8.4.4",
+    "sass": "^1.54.8",
+    "sass-loader": "^10.3.1",
     "vue-jest": "^3.0.4"
   }
 }
